update profile done

--- a/index.html
+++ b/index.html
@@ -7,35 +7,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
-  <div class="card-white">
-     <h1>Hello I am waseem &#128512. </h1>
-     <img src="https://res.cloudinary.com/wagon/image/upload/c_fill,g_face,h_200,w_200/v1661754709/c9zwcjedvjeaswwmxfdu.jpg" alt="My profile picture"  class="img-circle" id="profile-picture">
-     <p>I love coding and interested to learn more.I love to watch movies and even do some work out to stay in good health.</p>
+
+<div class="box">
+  <div class="card">
+    <img src="https://res.cloudinary.com/wagon/image/upload/c_fill,g_face,h_200,w_200/v1661754709/c9zwcjedvjeaswwmxfdu.jpg" alt="My profile picture"  class="img-circle" id="profile-picture">
+    <br><h1>Waseem Mira</h1>
+    <h3>Web Developer</h3>
+     <p>I love coding and always wanted to become a software developer.After my studies,National diploma in Information Technology, I worked at a supermarket for two years and three months due to lockdown (covid). After a lot of research,I heard about Le Wagon and ready to move on with it.</p>
   </div>
 
-<div class="card-demo">
-   <h2>HTML</h2>
-    <p>I am passionate about HTML.</p>
-</div>
 
-<div class="card-demo">
-  <h2>MOVIES</h2>
-  <p>I like to watch movies in free time.</p>
-</div>
-
-<div class="card-demo">
-  <h2>Entertainement</h2>
-  <p>Wrestling is a part of my live.I watch them every week.</p>
-</div>
-   <div class="show">
-   <a href="https://watchwrestling.show/" id= "link" target="_blank">My favourite shows</a>
+  <div class="card">
+    <h2>Personal info</h2>
+    <div class="list">
+      <i class="fa fa-envelope fa-3x"aria-hidden="true"></i>
+      <h4> waseem007_mira@hotmail.com</h4>
+    </div>
   </div>
-<div class="card-white">
-  <h2>Follow Me On</h2>
-  <ul class="list-inline">
-    <li><a href="https://www.facebook.com/profile.php?id=100015125070979" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
-  </ul>
+
+  <div class="card">
+    <h2>Follow Me On</h2>
+      <ul class="list-inline">
+        <li><a href="https://www.facebook.com/profile.php?id=100015125070979" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+        <li><a href=" https://www.linkedin.com/in/waseem-mira-85129a241" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+      </ul>
+  </div>
+
+  <div class="card-one">
+    <h2>Education</h2>
+    <p><strong>2017-2019</strong>: National Diploma in Information Technology</p>
+    <p><strong>9 weeks (August-October)</strong>: Le wagon (Software developer)</p>
+  </div>
+
+    <div class="card-two">
+      <h2>Experience</h2>
+      <p><strong>2019-2022</strong>:LOLO Hypermarker</p>
+    </div>
+
+    <div class="card-three">
+      <h2>Language</h2>
+      <strong><h2>French and English</h2></strong>
+    </div>
+
+    <div class="card-four">
+      <h2>Hobbies</h2>
+      <p>Watch movies,do some  work-up at home. </p>
+    </div>
 </div>
 </body>
 </html>
